src/app/page.module.scss
.introDiv {
    display: flex;
    // flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 3rem;
    padding: 2rem;

    .spellingBeeImg {
        aspect-ratio: 1/1;
        min-width: 40%;
        max-width: 100%;
        height: 100%;
        object-fit: cover;
    }

    .bubblesImg {
        aspect-ratio: 1/1;
        min-width: 40%;
        max-width: 100%;
        height: 100%;
        object-fit: cover;
    }

    .introText {
        max-width: 777px;
        text-align: center;

        h4{
            font-size: 2.5rem;
        }

        p {
            font-size: 1.6rem;
            font-weight: 200;
        }
    }

    &.introDiv1 {
        min-height: 60vh;
        max-width: 999px;
        margin-block: 2rem;
    }

    @media only screen and (max-width: 768px){
        flex-wrap: wrap;

        &.introDiv1{
            height: unset;
            min-height: unset;
            padding: 3rem 2rem;
        }
        
        .spellingBeeImg {
            width: 85%;
        }
        .bubblesImg {
            order: 2;
            width: 92%;
        }
    }

    .homeBtn {
        font-size: 1.2rem;
    }
    .enrollmentBtn, .programsBtn, .programBtn {
        background-color: var(--link-hover-bg-color);
    }
}

.heroBg {
    width: 100vw;
    // background-color: var(--alt-bg-color);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.homeVideoDiv {
    min-height: 60vh;
    width: 100vw;
    padding: 2rem 2rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    // background: var(--link-hover-bg-color);
    background-color: white;

    h4{
        font-size: 2.5rem;
        // color: var(--main-light-text-color);
        color: var(--main-text-color);
        text-align: center;
        margin: 1rem 2rem;
    }
    .homeVideo {
        width: clamp(300px, 555px, 100%);
        // height: auto;
        max-width: 100%;
        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.7);
        border-radius: 1%;
        // object-fit: cover;
    }    
    .inquiryButton{
        font-size: 1.6rem;
        margin-top: 1rem;
        background-color: var(--link-hover-bg-color);
    }
}


.homeSlogan{
    width: 100vw;
    max-width: 100vw;
    min-height: 66px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    background-color: var(--link-hover-bg-color);
    color: var(--main-light-text-color);
    padding-block: 0.77rem;

    h4{
        max-width: 100%;
        text-align: center;
        font-size: 2rem;
        margin-inline: 2rem;
        margin-block: 0;
    }
}

